--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                     <h1>Praktyki? A co to takiego?</h1>
                     <hr>
                     <p>
-                        Jako iż mam więcej szczęścia niż rozumu, udało mi się skorzystać z (wtedy tak myślałem) super okazji i wyjechać na praktyki do tzw. przez polaków Reichu, czyli Niemiec.
+                        Z racji tego, że w bardzo szybkim tempie nadszedł trzeci rok mojej nauki w technikum, nadszedł również czas na pięcio tygodniową przerwę od szkoły zwaną praktykami zawodowymi.
+                    </p>
+                    <p>
+                        Jako iż mam więcej szczęścia niż rozumu, udało mi się skorzystać z (wtedy tak myślałem) super okazji i wyjechać na praktyki do tzw. przez polaków Reichu, czyli Niemiec w ramach projektu Erasmus+.
                     </p>
                     <p>
                         Na samym początku, gdy dowiedziałem się, że jestem jednym z <b><i>NIESŁYCHANEJ DZIESIĄTKI</i></b> byłem bardzo podekscytowany i ucieszony z racji tego, iż mogłem sobie dorobić dodatkowe €urosy.
@@ -181,31 +184,34 @@
                             </ol>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="d-block w-100" src="resources/img/slider/coding.jpg" alt="First slide">
+                                <img class="d-block w-100" src="resources/img/slider/coding.jpg" alt="1st slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/stadium.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="resources/img/slider/stadium.jpg" alt="2nd slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/mountain.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="resources/img/slider/mountain.jpg" alt="3rd slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/adventure-park.jpg" alt="Fourth slide">
+                                <img class="d-block w-100" src="resources/img/slider/adventure-park.jpg" alt="4th slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/cars.jpg" alt="Fifth slide">
+                                <img class="d-block w-100" src="resources/img/slider/cars.jpg" alt="5th slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/fireengine.jpg" alt="Sixth slide">
+                                <img class="d-block w-100" src="resources/img/slider/boeing-speyer.jpg" alt="6th slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/towers.jpg" alt="Seventh slide">
+                                <img class="d-block w-100" src="resources/img/slider/fireengine.jpg" alt="7th slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/airbus.jpg" alt="Eighth slide">
+                                <img class="d-block w-100" src="resources/img/slider/towers.jpg" alt="8th slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="resources/img/slider/boeing.jpg" alt="Nineth slide">
+                                <img class="d-block w-100" src="resources/img/slider/airbus.jpg" alt="9th slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="resources/img/slider/boeing.jpg" alt="10th slide">
                               </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
