--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
     <script src="https://kit.fontawesome.com/ab3eab1ff2.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!--
+    <div class="container-fluid header vh-100 d-flex flex-column justify-content-center align-items-center">
+        <h1 class="display-4">Praktyka Okiem Informatyka</h1>
+        <hr style="width: 60%; border-color: white;">
+    </div>
+    -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-2">
                 <nav class="navbar-vertical">
                     <ul>
                         <li>
-                            <a class="active" href="#Home">Home</a>
+                            <a href="#Home">Home</a>
                         </li>
                         <li>
                             <a href="#Praktyka">Praktyka</a>
                         </li>
-                        <li>
+                        <li> 
                             <a href="#Niemcy">Niemcy</a>
-                        </li>
+                        </li> 
                         <li>
                             <a href="#Polska">Polska</a>
                         </li>
@@ -47,6 +53,7 @@
                     <h1 class="display-4">Praktyka Okiem Informatyka</h1>
                     <hr style="width: 100%;">
                 </header>
+
                 <article id="Praktyka" class="text-justify my-5" style="min-height: 50vh;">
                     <h1>Praktyki? A co to takiego?</h1>
                     <hr>
