--- a/index.html
+++ b/index.html
@@ -27,38 +27,40 @@
                 <nav class="navbar-vertical">
                     <ul>
                         <li>
-                            <a href="#Home">Home</a>
+                            <a href="#Home" class="Home-marker">Home</a>
                         </li>
                         <li>
-                            <a href="#Praktyka">Praktyka</a>
+                            <a href="#Praktyka" class="Praktyka-marker">Praktyka</a>
                         </li>
                         <li> 
-                            <a href="#Niemcy">Niemcy</a>
+                            <a href="#Niemcy" class="Niemcy-marker">Niemcy</a>
                         </li> 
                         <li>
-                            <a href="#Polska">Polska</a>
+                            <a href="#Polska" class="Polska-marker">Polska</a>
                         </li>
                         <li>
-                            <a href="#Galeria">Galeria</a>
+                            <a href="#Galeria" class="Galeria-marker">Galeria</a>
                         </li>
                         <li>
-                            <a href="#Kontakt">Kontakt</a>
+                            <a href="#Kontakt" class="Kontakt-marker">Kontakt</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         
-            <div class="col-lg-8">
-                <header id="Home" class="vh-100 d-flex flex-column justify-content-center align-items-center">
-                    <h1 class="display-4">Praktyka Okiem Informatyka</h1>
-                    <hr style="width: 100%;">
+            <main class="col-lg-8">
+                <header class="vh-100 d-flex flex-column justify-content-center align-items-center">
+                    <section id="Home">
+                        <h1 class="display-4">Praktyka Okiem Informatyka</h1>
+                        <hr style="width: 100%;">
+                    </section>                    
                 </header>
 
                 <article id="Praktyka" class="text-justify my-5" style="min-height: 50vh;">
                     <h1>Praktyki? A co to takiego?</h1>
                     <hr>
                     <p>
-                        Z racji tego, że w bardzo szybkim tempie nadszedł trzeci rok mojej nauki w technikum, nadszedł również czas na pięcio tygodniową przerwę od szkoły zwaną praktykami zawodowymi.
+                        Z racji tego, że w bardzo szybkim tempie nadszedł trzeci rok mojej nauki w technikum, przyszedł również czas na pięciotygodniową przerwę od szkoły zwaną praktykami zawodowymi.
                     </p>
                     <p>
                         Jako iż mam więcej szczęścia niż rozumu, udało mi się skorzystać z (wtedy tak myślałem) super okazji i wyjechać na praktyki do tzw. przez polaków Reichu, czyli Niemiec w ramach projektu Erasmus+.
@@ -70,6 +72,7 @@
                         Z czasem jednak, moje podekscytowanie przerodziło się w lęk, lęk przed nieznanym i potrzebą załatwienia wielu pilnych spraw związanych z wyjazdem, w krótkim czasie. 
                     </p>
                 </article>
+
                 <article id="Niemcy" class="text-justify my-5" style="min-height: 50vh;">
                     <h1>Niemcy? Tam się da żyć?</h1>
                     <h5>04/11/2019 - 29/11/2019</h5>
@@ -78,7 +81,7 @@
                         Nie.
                     </p>
                     <p>    
-                        To znaczy, można aczkolwiek ja nie chcę tam wracać. 
+                        To znaczy... można, jednakże ja nie chcę tam wracać. 
                     </p>
                     <p>
                         W sumie w niemczech spędziliśmy 4 tygodnie, z czego przez 3 tygodnie pracowaliśmy w różnych firmach, a przez ostatni tydzień całą grupą braliśmy udział w kursach.
@@ -152,7 +155,7 @@
                         <p>
                             Na całe szczęście, udało nam się zdążyć ze wszystkim, lecz aby dopiąć wszystko na ostatni guzik musieliśmy siedzieć po nocach. Dzięki dzielnemu inofrmatykowki Krystianowi, który stworzył przepiękną bazę prezentacji spodobała się ona wszystkim zarówno w Niemczech jak i w Polsce, a dotarły do nas wiadomości, że nawet była najlepsza ze wszystkich kiedykolwiek zrobionych (nawet przez niemieckich praktykantów w Polsce). ;-)
                         </p>
-                    </div>    
+                    </div>                       
                 </article>
 
                 <article id="Polska" class="text-justify my-5" style="min-height: 50vh;">
@@ -170,7 +173,7 @@
                         <p>
                             Podczas tygodnia praktyk w Polsce dowiedziałem się wielu ciekawych i przydatnych rzeczy. Moim zadaniem było stworzenie aplikacji desktopowej w języku C#. Z racji tego, iż interesuję się programowaniem, była to dla mnie dobra lekcja podstaw tworzenia aplikacji z wykorzystaniem Windows Presentation Foundation. Poznanie tych podstaw było to dla mnie wielką motywacją, aby zacząć pracować nad własnymi projektami w domu.
                         </p>
-                    </div>                   
+                    </div>                                     
                 </article>
 
                 <article id="Galeria" class="text-justify my-5 vh-100">
@@ -183,58 +186,58 @@
                     <div class="container-fluid d-flex flex-column align-items-center mt-5">
                         <div id="carouselExampleIndicators" class="carousel slide w-75" data-ride="carousel">
                             <ol class="carousel-indicators">
-                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-                              <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
                             </ol>
                             <div class="carousel-inner">
-                              <div class="carousel-item active">
+                                <div class="carousel-item active">
                                 <img class="d-block w-100" src="resources/img/slider/coding.jpg" alt="1st slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/stadium.jpg" alt="2nd slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/mountain.jpg" alt="3rd slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/adventure-park.jpg" alt="4th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/cars.jpg" alt="5th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/boeing-speyer.jpg" alt="6th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/fireengine.jpg" alt="7th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/towers.jpg" alt="8th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/airbus.jpg" alt="9th slide">
-                              </div>
-                              <div class="carousel-item">
+                                </div>
+                                <div class="carousel-item">
                                 <img class="d-block w-100" src="resources/img/slider/boeing.jpg" alt="10th slide">
-                              </div>
+                                </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="sr-only">Previous</span>
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
                             </a>
                             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="sr-only">Next</span>
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
                             </a>
-                          </div>
-                    </div>
+                            </div>
+                    </div>                  
                 </article>
 
                 <article id="Kontakt" class="text-justify my-5" style="min-height: 90vh;">
@@ -263,9 +266,9 @@
                             <textarea class="form-control" name="message" id="form_message" rows="10" placeholder="Tutaj umieść swoją wiadomość" required ></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Wyślij</button>
-                    </form>
+                    </form>                  
                 </article>
-            </div>
+            </main>
         
             <div class="col-lg-2 d-flex flex-column align-items-center">
                 <nav class="navbar-horizontal d-flex flex-column align-items-center justify-content-center">
@@ -283,6 +286,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
